update all files

--- a/Recursion/Untitled.ipynb
+++ b/Recursion/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Move disc from B to A!\n",
+      "Move disc from B to C!\n",
+      "Move disc from A to C!\n",
+      "Move disc from B to A!\n",
+      "Move disc from C to B!\n",
+      "Move disc from C to A!\n",
+      "Move disc from B to A!\n"
+     ]
+    }
+   ],
    "source": [
-    "hanoi(200,'A','B','C')"
+    "hanoi(3,'B','C','A')"
    ]
   },
   {
